# libvmod_vdp

./: README.rst  configure.ac
src/: Makefile.am  vmod_vdp.c  vmod_vdp.vcc
src/tests/: test01.vtc
